Technologie/technologyStyle.css
* {
  /* box-shadow: 0 0 0 1px red inset; */
}

body {
  background-image: url('../assets/technology/background-technology-desktop.jpg');
  background-color: #0f0e20;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: 150px 30px 1fr 100px;
}

main {
  grid-column: 1 / span 12;
  grid-row: 2 / span 2;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: 30px 1fr 50px;
  width: 100%;
}

main .meetTitle-box {
  grid-column: 2 / -1;
  grid-row: 1 / span 1;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

main .meetTitle-box h3 {
  font-size: 1.2rem;
}

main .meetTitle-box span {
  color: #999ca4;
}

main .meetTitle-box span {
  margin-right: 0.5rem;
  font-size: 1.2rem;
}

main .technologyRadio-box {
  grid-column: 2 / span 2;
  grid-row: 2 / span 1;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: center;
  gap: 1.5rem;
}

main .technologyRadio-box div {
  display: flex;
  justify-content: center;
  align-items: center;
}

main .technologyRadio-box input {
  -webkit-appearance: none;
  transition: 0.3s all ease-in-out;
}

main .technologyRadio-box label {
  width: 4.5rem;
  height: 4.5rem;
  border-radius: 50%;
  border: 2px solid #727376;
  font-size: 1.2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: 0.3s all ease-in-out;
  cursor: pointer;
}

main .technologyRadio-box label:hover {
  border-color: #fff;
}

main .technologyRadio-box input:checked + label {
  background-color: #fff;
  border-color: #fff;
  color: #000;
}

main .detail-box {
  grid-column: 5 / span 7;
  grid-row: 2 / span 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  gap: 1rem;
}

main .detail-box h4 {
  font-size: 0.8rem;
}

main .detail-box h2 {
  font-size: 2.5rem;
}

main .detail-box .text-technology {
  width: 90%;
  padding: 0rem 2rem 0rem 0px;
}

main .img-box {
  grid-column: -1 / span 3;
  grid-row: 2 / span 1;
  width: 100%;
  height: 100%;
  align-self: center;
  justify-self: center;
  margin-bottom: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

main .img-box img {
  max-width: 100%;
  max-height: auto;
  object-fit: contain;
}

/*********************************************/
@media (max-width: 900px) {
  main .technologyRadio-box label {
    width: 3.5rem;
    height: 3.5rem;
  }

  main .detail-box .text-technology {
    padding: 0;
  }
}

@media (max-width: 768px) {
  body {
    display: flex;
    flex-direction: column;
    height: 100%;
  }

  main {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    /* row-gap: 1rem; */
    text-align: center;
    gap: 1rem;
    padding-bottom: 2rem;
  }

  main .detail-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    margin: 0;
    padding: 0;
  }

  main .technologyRadio-box {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0;
    gap: 1.5rem;
  }

  main .img-box {
    grid-column: 1 / span 12;
    grid-row: 2 / 3;
    height: 100%;
    width: 100%;
    align-self: center;
    order: 0;
  }

  .meetTitle-box {
    margin-left: 1rem;
  }
  .technologyRadio-box,
  .detail-box {
    order: 1;
  }
}

